# srn

./: README.md  pyproject.toml
srn/: examples.ipynb  main.py
tests/: test_class.py
