[tool.poetry]
name = "srn"
version = "0.1.0"
description = ""
authors = ["bayes14 <madschansen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
graphviz = "^0.20.1"
networkx = "^3.2"
matplotlib = "^3.8.0"
pytest = "^7.4.2"
sympy = "^1.12"
seaborn = "^0.13.0"
cvxopt = "^1.3.2"
watermark = "^2.4.3"
arviz = "^0.16.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
